Fixed working on mobiles
Changed max-width property.

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 body {
     width: 100%;
-    height: 100vh;
+    height: auto;
     color: #ffffff;
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 620%;
@@ -51,7 +51,7 @@ span {
 }
 
 .section {
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -76,6 +76,26 @@ span {
     text-align: left;
     font-family: 'Open Sans', serif;
     color: #ffffff;
+}
+
+@media only screen and (max-width: 770px) {
+    .about {
+        font-size: 14px;
+        text-align: center;
+        font-family: 'Open Sans', serif;
+        color: #ffffff;
+    }
+
+    .resume {
+        font-size: 14px;
+        text-align: center;
+        font-family: 'Open Sans', serif;
+        color: #ffffff;
+    }
+
+    hr {
+        margin-left: 47%;
+    }
 }
 
 @-webkit-keyframes Gradient {
